--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 sonar.projectKey=upa-io_py-microservice-poc
 sonar.organization=upa-io
+sonar.python.version=3.11
 
 #This is the name and version displayed in the SonarCloud UI.
 sonar.projectName=py-microservice-poc
