--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,7 @@
 sonar.projectKey=upa-io_py-microservice-poc
 sonar.organization=upa-io
 sonar.python.version=3.11
+sonar.python.coverage.reportPaths=coverage.xml
 
 #This is the name and version displayed in the SonarCloud UI.
 sonar.projectName=py-microservice-poc
