--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,7 @@ deps =
     pytest-cov
     fastapi
     httpx
+    bandit
 commands = pytest --cov=main --cov-report=xml --cov-config=tox.ini --cov-branch
  
 [coverage:run]
