--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,12 +16,14 @@ jobs:
       - uses: actions/setup-python@v4.7.0
         with:
           python-version: '3.11' 
-      - name: Install tox and any other packages
+      - name: Install Tox
         run: pip install tox
       - name: Tox
         run: tox -e py
+      - name: Install Bandit 
+        run: pip install bandit 
       - name: Bandit scanner
-        run: bandit -r ${{ github.workspace }} -o bandit_report.json --format json   
+        run: bandit -r ${{ github.workspace }} -o bandit_report.json --format json
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@v1.9.1
         env:
