Agregar exclusion de dir

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Install Bandit 
         run: pip install bandit 
       - name: Bandit scanner
-        run: bandit -r ${{ github.workspace }} -o bandit_report.json --format json
+        run: bandit -r ${{ github.workspace }} -o bandit_report.json --format json -x "*/.tox/*"
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@v1.9.1
         env:
