--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,13 @@ jobs:
       - name: Install Bandit 
         run: pip install bandit 
       - name: Bandit scanner
-        run: bandit -r ${{ github.workspace }} -o bandit_report.json --format json -x "*/.tox/*"
+        run: |
+          bandit -r ${{ github.workspace }} -o bandit_report.json --format json
+          EXIT_CODE=$?
+          if [ $EXIT_CODE -ne 0 ]; then
+            echo "Bandit analysis completed with exit code $EXIT_CODE. Changing to exit code 0."
+            exit 0
+          fi
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@v1.9.1
         env:
