Agregar exclusion de dir

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,7 @@ jobs:
         run: pip install bandit 
       - name: Bandit scanner
         run: |
-          bandit -r ${{ github.workspace }} -o bandit_report.json --format json
+          bandit -r ${{ github.workspace }} -o bandit_report.json --format json -x "*/.tox/*"
           EXIT_CODE=$?
           if [ $EXIT_CODE -ne 0 ]; then
             echo "Bandit analysis completed with exit code $EXIT_CODE. Changing to exit code 0."
