--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,8 +23,9 @@ jobs:
       - name: Install Bandit 
         run: pip install bandit 
       - name: Bandit scanner
-       run: bandit -r ${{ github.workspace }} -o bandit_report.json --format json -x "*/.t ox/*" || true
+        run: bandit -r ${{ github.workspace }} -o bandit_report.json --format json -x "*/.t ox/*"
       - name: SonarCloud Scan
+        if: always()
         uses: SonarSource/sonarcloud-github-action@v1.9.1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
