--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,6 @@ deps =
     pytest-cov
     fastapi
     httpx
-commands = pytest --cov=tests --cov-report=xml --cov-config=tox.ini --cov-branch --ignore=app/__init__.py
+commands = pytest --cov=app --cov-report=xml --cov-config=tox.ini --cov-branch 
  
 [coverage:run]
