--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,9 +20,11 @@ jobs:
         run: pip install tox
       - name: Run Tox Scan
         run: tox -e py
-      - name: Run SonarCloud Scan
-        if: always()
-        uses: SonarSource/sonarcloud-github-action@v2.0.0
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      - name: Display Coverage Report
+        run: cat coverage.xml
+      # - name: Run SonarCloud Scan
+      #   if: always()
+      #   uses: SonarSource/sonarcloud-github-action@v2.0.0
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+      #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
