Ajustes en configuracion

--- a/tox.ini
+++ b/tox.ini
@@ -12,3 +12,6 @@ commands = pytest --cov=app --cov-report=xml --cov-config=tox.ini --cov-branch
  
 [coverage:run]
 omit = **/__init__.py
+relative_files = True
+source = py-microservice-poc
+branch = True
