--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,12 @@ jobs:
       - uses: actions/checkout@v3.5.3
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - name: Cache Tox dependencies
+        id: cache-tox
+        uses: actions/cache@v3.3.1
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('tox.ini') }}
       - uses: actions/setup-python@v4.7.0
         with:
           python-version: '3.11' 
@@ -20,10 +26,7 @@ jobs:
         run: pip install tox
       - name: Run Tox Scan
         run: tox -e py
-      - name: Display Coverage Report After
-        run: cat coverage.xml
       - name: Run SonarCloud Scan
-        if: always()
         uses: SonarSource/sonarcloud-github-action@v2.0.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
