Update build-quality workflow, Dockerfile, and Python version

--- a/.github/workflows/build-quality.yml
+++ b/.github/workflows/build-quality.yml
@@ -1,8 +1,11 @@
-name: SonarCloud Analysis
+name: build-quality
 on:
   push:
     branches:
       - main
+    paths:
+      - 'app/**/*.py'
+      - 'requirements.txt'
   pull_request:
     types: [opened, synchronize, reopened]
 jobs:
