--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,9 +3,8 @@
 // Update the VARIANT arg in docker-compose.yml to pick a Python version: 3, 3.8, 3.7, 3.6 
 {
     "name": "Python 3.12",
-    "build": {
-        "dockerfile": "Dockerfile"
-    },
+    "dockerComposeFile": "compose.yaml",
+    "service": "app",
     "workspaceFolder": "/workspace",
     // Set *default* container specific settings.json values on container create.
     "customizations": {
@@ -14,6 +13,9 @@
                 "terminal.integrated.profiles.linux": {
                     "bash": {
                         "path": "/bin/bash"
+                    },
+                    "zsh": {
+                        "path": "/bin/zsh"
                     }
                 },
                 // Add the IDs of extensions you want installed when the container is created.
