feat: add endpoints and unit tests

--- a/.github/workflows/build-quality.yml
+++ b/.github/workflows/build-quality.yml
@@ -5,9 +5,8 @@ on:
       - main
     paths:
       - 'app/**/*.py'
+      - 'tests/**/*.py'
       - 'requirements.txt'
-  pull_request:
-    types: [opened, synchronize, reopened]
 jobs:
   quality-code:
     name: Quality-Code
