--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,4 @@
-# Archivo requirements.txt para el proyecto
-
-# Especificamos la versión de FastAPI que queremos utilizar. 
-# Utilizamos la sintaxis ">=0.68.0,<0.69.0" para incluir todas las versiones
-# desde la 0.68.0 (inclusive) hasta la 0.69.0 (no inclusiva).
-# Esto asegura que tengamos una versión compatible con las funcionalidades requeridas.
-fastapi>=0.109.0,<0.111.1
-
-# Especificamos la versión de Pydantic que queremos utilizar. 
-# Al igual que con FastAPI, utilizamos la sintaxis ">=1.8.0,<2.0.0" para incluir todas las versiones
-# desde la 1.8.0 (inclusive) hasta la 2.0.0 (no inclusiva).
-# Esto nos garantiza tener una versión compatible con las funcionalidades que necesitamos.
-pydantic>=2.8.2,<2.8.3
-
-# Especificamos la versión de Uvicorn que queremos utilizar. 
-# Utilizamos la sintaxis ">=0.15.0,<0.16.0" para incluir todas las versiones
-# desde la 0.15.0 (inclusive) hasta la 0.16.0 (no inclusiva).
-# Al igual que con las otras dependencias, esto nos asegura una versión compatible con nuestro proyecto.
-uvicorn>=0.27.0,<0.30.2
+fastapi == 0.111.0
+pydantic == 2.8.2
+uvicorn == 0.30.1
+python-dateutil == 2.9.0.post0
