--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,7 @@ deps =
     pytest-cov
     fastapi
     httpx
+    python-dateutil
 commands = pytest --cov=app --cov-report=xml --cov-config=tox.ini --cov-branch 
  
 [coverage:run]
