--- a/.github/workflows/build-quality.yml
+++ b/.github/workflows/build-quality.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4.1.7
         with:
-          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+          fetch-depth: 0
       - name: Cache Tox dependencies
         id: cache-tox
         uses: actions/cache@v4.0.2
@@ -32,5 +32,5 @@ jobs:
       - name: Run SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@v2.3.0
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
