--- a/.github/workflows/build-quality.yml
+++ b/.github/workflows/build-quality.yml
@@ -7,6 +7,7 @@ on:
       - 'app/**/*.py'
       - 'tests/**/*.py'
       - 'requirements.txt'
+      - 'tox.ini'
   workflow_dispatch:
 jobs:
   quality-code:
