--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,7 +5,9 @@ sonar.python.coverage.reportPaths=coverage.xml
 
 #This is the name and version displayed in the SonarCloud UI.
 sonar.projectName=py-microservice-poc
-sonar.projectVersion=1.1.0
+sonar.projectVersion=1.11.0
+# Exclusions for SonarQube Scanner
+sonar.exclusions=**/tests/**
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 #sonar.sources=.
