--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,9 +5,9 @@ sonar.python.coverage.reportPaths=coverage.xml
 
 #This is the name and version displayed in the SonarCloud UI.
 sonar.projectName=py-microservice-poc
-sonar.projectVersion=1.11.0
+sonar.projectVersion=1.12.0
 # Exclusions for SonarQube Scanner
-sonar.exclusions=**/tests/**
+sonar.exclusions=**/tests/**,**/__init__.py
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 #sonar.sources=.
