--- a/.github/workflows/build-quality.yml
+++ b/.github/workflows/build-quality.yml
@@ -8,6 +8,8 @@ on:
       - 'tests/**/*.py'
       - 'requirements.txt'
       - 'tox.ini'
+  pull_request:
+      types: [opened, synchronize, reopened]
   workflow_dispatch:
 jobs:
   quality-code:
